# specterext-taxtheft

./: .gitignore  LICENSE  MANIFEST.in  README.md  play.sh  pyproject.toml  requirements.txt  setup.cfg
src/k9ert/specterext/taxtheft/: __main__.py  app_config.py  ccxt.py  ccxt_cache.py  config.py  controller.py  service.py
src/k9ert/specterext/taxtheft/templates/taxtheft/: base.jinja  index.jinja  settings.jinja  transactions.jinja
src/k9ert/specterext/taxtheft/templates/taxtheft/components/: taxtheft_menu.jinja  taxtheft_tab.jinja
tests/: conftest.py  conftest_visibility.py  fix_devices_and_wallets.py  fix_spectrum_mainchain.py  test_ccxt.py  test_ccxt_cache.py  test_playground.py
